    into the OSG.
    
    New osg::TextureRectangle texture class which encapsulates the
    NV_texture_rectangle and EXT_texture_rectange extensions.

    Added automatic subloading of textures when image data is updated.
    
    Added the option of automatic unref'ing of texture image data once the data has
    been download to OpenGL to active graphics contexts.
    
    New osg::ArgumentParser and osg::ApplicationUsage classes for 
    convineiently and robustly parsing command line arguments and
    report command line usage, environmental variables and
    keyboard and mouse bindings used by applications.  Running any
    of the examples with -h or --help will report full details example
    usage.  Keyboard and Mouse bindings usage is now also available as
    a HUD on all examples, simply press 'h' while the app is runing to
    bring up help.

    New database cache in the osgDB library.
    
    Added support for early abort of rendering, useful for interactive
    applications which occasional have rendering that takes that long
    enough (i.e. several seconds) that end users may wish to abort 
    during the drawing.

    Clean up of memory management in the OpenFlight loader.

    Various API clean ups and bug fixes.

24th January 2003 - OpenSceneGraph-0.9.3.tar.gz

    >>> adds support navigational light points, multi-threaded dynamic
    >>> paging of Terrapage databases, ARB_vertex_program extension, 
    >>> DirectD .x model loader, and integration with OpenProducer for 
    >>> multi-threaded, multi-window/pipe rendering.

    Added osgProducer library which integrates the OpenSceneGraph seemlessly
    with OpenProducer to provide runtime configurable management of windows
    and multipipe graphic systems.  The osgproducer demo illustrate how
    developers can write applications very simply that harness the power
    of the OpenProducer and OpenSceneGraph in an extremely flexible way.
    OpenProducer can be downloaded from: